[package]
name = "gpu-checkpoint"
version = "0.1.0"
edition = "2021"
authors = ["GPU Checkpoint Team"]
description = "GPU-aware checkpoint/restore system with intelligent strategy selection"
license = "MIT OR Apache-2.0"

[dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI and logging
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Async runtime (for concurrent operations)
tokio = { version = "1.38", features = ["full"] }

# System interaction
nix = { version = "0.29", features = ["process", "fs"] }
memmap2 = "0.9"
libc = "0.2"
regex = "1.10"

# Performance and metrics
indicatif = "0.17"

# Linux-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.16"

# Testing utilities
[dev-dependencies]
tempfile = "3.10"
criterion = "0.5"
proptest = "1.4"
mockall = "0.12"

[[bin]]
name = "gpu-checkpoint"
path = "src/main.rs"

[[bin]]
name = "mock-gpu-process"
path = "src/bin/mock_gpu_process.rs"

[lib]
name = "gpu_checkpoint"
path = "src/lib.rs"

# [[bench]]
# name = "detection_benchmark"
# harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 0
debug = true
